--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@ nav {
 .nav__menu-bar div {
   width: 40px;
   height: 4px;
-  background-color: black;
+  background-color: gainsboro;
   border-radius: 2px;
 }
 .nav__menu-list {
