--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,8 @@ nav {
 }
 .nav__menu-list.active {
   right: 0;
+  box-shadow: 0 6px 10px -1px rgba(0, 0, 0, 0.1),
+    0 6px 10px -2px rgba(0, 0, 0, 0.1);
 }
 .nav__link {
   font-size: 20px;
